hydro_lang/tests/compile-fail-stable/non_bounded.rs
../compile-fail/non_bounded.rs